# skeleton-cpp-project

./: .gitmodules  Dockerfile  README.md  action.yml  build_docker_container.sh  execute_build_test.sh  execute_github_action_locally.sh  execute_tests.sh  execute_unit_tests.sh  run_docker_container.sh  run_interactive_docker_container.sh
.github/actions/main-docker-action/: action.yml
.github/workflows/: easier-github-actions-workflow.yaml  main-workflow.yml
actions/: main-docker-action.yml
app/: CMakeLists.txt  build_app.sh  build_unit_tests.sh  execute_build_test.sh  execute_tests.sh  execute_unit_tests.sh
app/include/: messages.h
app/src/: main.cpp  messages.cpp
app/tests/: main_test.cpp
